--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <section class="portfolio-block contact">
             <div class="container">
                 <div class="heading">
-                    <h2>Contact me</h2>
+                    <h2>Contact Us</h2>
                 </div>
                 <form data-bss-recipient="bec70dd98240cd74a59cbff3cd1e5cf9" data-bss-redirect-url="index.html">
                     <div class="mb-3"><label class="form-label" for="name">Your Name</label><input class="form-control item" type="text" id="name"></div>
