--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </section>
     </main>
     <section class="portfolio-block website gradient">
-        <div class="container">
-            <h3 class="text-center">The Project</h3>
-            <p style="padding: 20px;padding-bottom: 0px;">The idea was to design proof of human work puzzles for a cryptocurrency, which could serve as an alternative to current CAPTCHAs. This would effectively create a crypto with human miners, possessing the benefit of being better for the environment than most widespread cryptos, being less vulnerable to 51% attacks that small cryptos can frequently face, and generally being a fairer crypto that anyone could get into.<br></p>
-            <p class="text-center" style="padding: 20px;padding-top: 0px;">As of now, we are actively searching for people to help us with this project, and develop a proof of concept to take the idea further.</p>
+        <div class="container" style="text-align: center;">
+            <h1 style="text-align: left;font-size: 45px;margin-bottom: 20px;">The Project</h1>
+            <p style="text-align: left;font-size: 20px;">The idea was to design proof of human work puzzles for a cryptocurrency, which could serve as an alternative to current CAPTCHAs. This would effectively create a crypto with human miners, possessing the benefit of being better for the environment than most widespread cryptos, being less vulnerable to 51% attacks that small cryptos can frequently face, and generally being a fairer crypto that anyone could get into.</p>
+            <p style="text-align: left;font-size: 20px;">As of now, we are actively searching for people to help us with this project, and develop a proof of concept to take the idea further.</p>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
