--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
                 </ul>
             </div>
         </div>
