--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/blog">Blog</a></li>
                 </ul>
             </div>
         </div>
