Added "our team" section and made the website a PWA
hopefully the PWA bit works

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="website">
     <meta name="description" content="Hello! We are the NOVA Team. Collectively, we are working towards a future where cryptocurrencies can be maintained through the use of proofs of human works (PoHs), paving the path for alternatives to cryptos as well as modern CAPTCHAs">
-    <meta property="og:image" content="https://garv-shah.github.io/assets/img/NOVA System logo.png">
+    <meta property="og:image" content="https://the-nova-system.github.io/assets/img/NOVA%20System%20Logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/nova-app-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/nova-splash-512x512.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
 
 <body>
@@ -48,6 +53,42 @@
             <p style="text-align: left;font-size: 20px;">As of now, we are actively searching for people to help us with this project, and develop a proof of concept to take the idea further.</p>
         </div>
     </section>
+    <section class="team-boxed">
+        <div class="container">
+            <!-- Start: Intro -->
+            <div class="intro">
+                <h2 class="text-center" style="font-size: 44px;">Our Team </h2>
+                <p class="text-center">Hi, we're the NOVA Team! Here's a little about us:</p>
+            </div><!-- End: Intro -->
+            <!-- Start: People -->
+            <div class="row people">
+                <div class="col-md-6 col-lg-4 d-flex flex-fill justify-content-md-center item">
+                    <div class="box"><img class="rounded-circle" src="assets/img/liam.png">
+                        <h3 class="name">Liam Shaw</h3>
+                        <p class="title">educator</p>
+                        <p class="description">Hi, I'm Liam!&nbsp;While not being as technologically proficient as Garv, I am excited by the prospects our proposed NOVA system presents, as well as its technological and environmental implications. My primary focus throughout this task will be (as well as helping Garv and Natsuki code our PoH system) to create accessible resources and lesson plans for students willing to learn from our experience creating the technology and its modern applications, as well as real-life skills such as investing in cryptocurrencies and learning about how computer systems operate in the real world.</p>
+                        <div class="social"><a href="https://github.com/LiamlShaw"><i class="fa fa-github"></i></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 d-flex flex-fill justify-content-md-center item">
+                    <div class="box"><img class="rounded-circle" src="assets/img/natsuki.png">
+                        <h3 class="name">Natsuki Rogers</h3>
+                        <p class="title">Communications</p>
+                        <p class="description">Hi, I'm Natsuki!&nbsp;I love the idea of this project, and while I know it will be a lot of work I’m really looking forward to working on it alongside Garv and Liam. The applications of this technology are potentially enormous, and I love having the ability to help other people learn about things through this. Because this technology doesn’t currently exist, building it from the ground up will allow us to have a profound understanding of how it works, and in doing so we will all have the opportunity to grow as learners and impact the community in a meaningful way.</p>
+                        <div class="social"><a href="https://github.com/Natsuki-Rogers"><i class="fa fa-github"></i></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 d-flex d-md-flex flex-fill justify-content-md-center item">
+                    <div class="box"><img class="rounded-circle" src="assets/img/garv.png">
+                        <h3 class="name">Garv Shah</h3>
+                        <p class="title">developer</p>
+                        <p class="description">Hi, I'm Garv! My skills mostly lay in the IT. While not as publicly capable of education or presentation (such as Liam and Natsuki), I should be able to help with the underlying technologies. I believe I am well capable of creating the website (for education) and understanding the frameworks that will allow us to program such a network. Though creating a crypto in such a fashion will definitely be a challenge, it’s one I believe I will be able to contribute to the success to. Essentially, I contribute my technical expertise in this field. </p>
+                        <div class="social"><a href="https://github.com/garv-shah"><i class="fa fa-github"></i></a></div>
+                    </div>
+                </div>
+            </div><!-- End: People -->
+        </div>
+    </section><!-- End: Team Boxed -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
