--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,17 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="website">
     <meta name="description" content="Hello! We are the NOVA Team. Collectively, we are working towards a future where cryptocurrencies can be maintained through the use of proofs of human works (PoHs), paving the path for alternatives to cryptos as well as modern CAPTCHAs">
-    <meta property="og:image" content="https://garv-shah.github.io/assets/img/NOVA System logo.png">
+    <meta property="og:image" content="https://the-nova-system.github.io/assets/img/NOVA%20System%20Logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/nova-app-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/nova-splash-512x512.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
 </head>
 
 <body>
@@ -47,11 +52,6 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
-        <div class="container">
-            <div class="links"><a href="index.html">Home</a></div>
-        </div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
