updated my profile picture

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 d-flex d-md-flex flex-fill justify-content-md-center item">
-                    <div class="box"><img class="rounded-circle" src="assets/img/garv.png">
+                    <div class="box"><img class="rounded-circle" src="assets/img/garv.jpg">
                         <h3 class="name">Garv Shah</h3>
                         <p class="title">developer</p>
                         <p class="description">Hi, I'm Garv! My skills mostly lay in the IT. While not as publicly capable of education or presentation (such as Liam and Natsuki), I should be able to help with the underlying technologies. I believe I am well capable of creating the website (for education) and understanding the frameworks that will allow us to program such a network. Though creating a crypto in such a fashion will definitely be a challenge, it’s one I believe I will be able to contribute to the success to. Essentially, I contribute my technical expertise in this field. </p>
