added serviceworker for index.html

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact - NOVA</title>
     <meta name="tags" content="Crypto, Cryptocurrencies, CAPTCHA, AI, Machine Learning">
     <meta name="author" content="Garv Shah">
@@ -11,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#2d388a"/>
     <meta name="description" content="Hello! We are the NOVA Team. Collectively, we are working towards a future where cryptocurrencies can be maintained through the use of proofs of human works (PoHs), paving the path for alternatives to cryptos as well as modern CAPTCHAs">
-    <meta property="og:image" content="https://the-nova-system.github.io/assets/img/NOVA%20System%20Logo.png">
+    <meta property="og:image" content="https://the-nova-system.github.io/assets/img/NOVA_System_Logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/nova-app-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/nova-splash-512x512.png">
