--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="theme-color" content="#2d388a"/>
     <meta name="description" content="Hello! We are the NOVA Team. Collectively, we are working towards a future where cryptocurrencies can be maintained through the use of proofs of human works (PoHs), paving the path for alternatives to cryptos as well as modern CAPTCHAs">
     <meta property="og:image" content="https://the-nova-system.github.io/assets/img/NOVA_System_Logo.png">
+    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/nova-app-192x192.png">
