updated natsuki's picture

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 d-flex flex-fill justify-content-md-center item">
-                    <div class="box"><img class="rounded-circle" src="assets/img/natsuki.png">
+                    <div class="box"><img class="rounded-circle" src="assets/img/natsuki.jpg">
                         <h3 class="name">Natsuki Rogers</h3>
                         <p class="title">Communications</p>
                         <p class="description">Hi, I'm Natsuki!&nbsp;I love the idea of this project, and while I know it will be a lot of work I’m really looking forward to working on it alongside Garv and Liam. The applications of this technology are potentially enormous, and I love having the ability to help other people learn about things through this. Because this technology doesn’t currently exist, building it from the ground up will allow us to have a profound understanding of how it works, and in doing so we will all have the opportunity to grow as learners and impact the community in a meaningful way.</p>
